--- a/ATV_QUERY.html
+++ b/ATV_QUERY.html
@@ -117,8 +117,8 @@
                 <span>Links das atividades:</span>
             </div>
             <div class="links">
-                <a href="#">Atividade 1</a>
-                <a href="#">Atividade 2</a>
+                <a href="https://github.com/tenesio/html-des.-web">Atividade 1</a>
+                <a href="https://github.com/tenesio/Portal-de-noticias">Atividade 2</a>
                 <a href="#">Atividade 3</a>
             </div>
         </main>
